fdo#57938 SwPaM::HasReadonlySel: commented text ranges are not read-only

(cherry picked from commit fd0da52d371ca13d66be3b04d89f9d9cf73baddd)

Change-Id: I8191ed6383c4c636be67b8d42654dbba0a5c8b6f